# unblock

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
.spec-lite/: TODO.md  feature-summary.md  plan.md
.spec-lite/features/: feature_async_properties.md  feature_class_asyncification.md  feature_documentation.md  feature_execution_core.md  feature_function_asyncification.md  feature_packaging_tooling.md  feature_test_suite.md
docs/source/: api.rst  apireference.rst  basicusage.rst  caveats.rst  conf.py  features.rst  index.rst  migration.rst  tutorial.rst
tests/: __init__.py  _picklable_targets.py  async_base_tests.py  async_ctxmgrbase_tests.py  async_ctxmgriterbase_tests.py  async_iterbase_tests.py  async_ppbase_tests.py  async_ppctxmgrbase_tests.py  async_ppctxmgriterbase_tests.py  async_ppiterbase_tests.py  async_property_tests.py  asyncify_pp_tests.py  asyncify_tests.py  conftest.py  fileinput_tests.py  gzip_tests.py  io_tests.py  lzma_tests.py  os_tests.py  samples.py  shutil_tests.py  test_classes.py  test_common.py  test_config_lifecycle.py  test_execution_core.py  test_functions.py  test_properties.py  testdata.py  zipfile_tests.py  zlib_tests.py
tests/data/Test Dir/: sample_text.txt
unblock/: __init__.py  _executors.py  _scheduling.py  bz2.py  classes.py  common.py  config.py  core.py  errors.py  fileinput.py  functions.py  gzip.py  lzma.py  os.py  properties.py  shutil.py  tarfile.py  tempfile.py  zipfile.py  zlib.py
unblock/io/: __init__.py  base.py  binary.py  raw.py  text.py
