[project]
name = "get-unblock"
version = "0.0.1"
description = "unblock comes with utilities that can be used to convert synchronous functions to async for use in event loop"
dependencies = []
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx>=5.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["unblock"]
